--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.3.0",
     "git": "^0.1.5",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
